--- a/voice-order-client/pom.xml
+++ b/voice-order-client/pom.xml
@@ -20,6 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <grpc.version>1.58.0</grpc.version>
         <protobuf.version>3.21.7</protobuf.version>
+        <spring-boot.version>2.7.0</spring-boot.version>
     </properties>
 
     <repositories>
@@ -111,9 +112,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.0</version>
                 <configuration>
-                    <mainClass>com.voiceorder.VoiceOrderApplication</mainClass>
-                    <addResources>true</addResources>
+                    <mainClass>com.voiceorder.client.VoiceOrderApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
